--- a/src/styles/Teachers.css
+++ b/src/styles/Teachers.css
@@ -110,7 +110,7 @@
 
  }
 
-  .card .face.back {
+ .card .face.back {
 
      color: black;
      transform: perspective(500px) rotateY(180deg);
@@ -155,75 +155,81 @@
          grid-template-columns: repeat(2, auto);
          justify-content: center;
          align-items: center;
-         gap: 20px;
+         /* gap: 20px;
+         width: 85%;
+         padding-left:20% ; */
 
      }
+
      .section-open .course-list {
-        width: 93%;
-        padding-left: 2.5%;(!important)
-    }
-    
-    .card {
-        position: relative;
-        width: 430px;
-        height: 400px;
-        transform-style: preserve-3d;
-        border-radius: 15px;
-    }
-    
-    
-    
-    .pictures {
-        width: 360px;
-         height: 210px;
+         width: 89%;
+         padding-left: 2% !important;
+        
+     }
+
+     .card {
+         position: relative;
+         width: 410px;
+         height: 400px;
+         transform-style: preserve-3d;
+         border-radius: 15px;
+     }
+
+
+
+     .section-open .pictures {
+         width: 330px;
+         height: 260px;
          border-top-left-radius: 0.4rem;
          border-top-right-radius: 0.4rem;
-         
+
      }
-     
-     
-     
-    }
-    
-    @media (max-width:500px) {
-        .course-list {
-            display: grid;
-            grid-template-columns: repeat(1, auto);
-            justify-content: center;
-            align-items: center;
-            gap: 50px;
-            margin-left: 2px;
-            
-        }
-        
-        
-        
-        .card {
+
+
+
+ }
+
+ @media (max-width:500px) {
+     .course-list {
+         display: grid;
+         grid-template-columns: repeat(1, auto);
+         justify-content: center;
+         align-items: center;
+         gap: 50px;
+         margin-left: 2px;
+
+     }
+
+
+
+     .card {
          position: relative;
          width: 500px;
          height: 400px;
          transform-style: preserve-3d;
          border-radius: 15px;
      }
-     
-     
+
+
      .pictures {
          width: 300px;
          height: 310px;
          border-top-left-radius: 0.4rem;
          border-top-right-radius: 0.4rem;
-         
-        }
+
+     }
+
      .card .face.front .teacher-info {
-        position: absolute;
-        bottom: 0;
-        text-align: start;
-    }
-    
-    .section-open .course-list {
-        width: 93%;
-        padding-left: 0;(!important)
-    }
-   
+         position: absolute;
+         bottom: 0;
+         text-align: start;
+     }
+
+     .section-open .course-list {
+         width: 93%;
+         padding-left: 0;
+         ( !important)
+     }
+
 
  }
