--- a/src/styles/Students.css
+++ b/src/styles/Students.css
@@ -81,14 +81,12 @@
         grid-template-columns: repeat(2, auto);
         justify-content: center;
         align-items: center;
-        gap: 20px;
-        /* margin-left: 2px; */
-        /* background-color: var(--nav-said); */
+        gap: 20px; 
 
     }
-    .card {
+    .section-open .card {
         position: relative;
-        width: 370px;
+        width: 358px;
         height: 350px;
         transform-style: preserve-3d;
         border-radius: 15px;
