--- a/src/styles/Teachers.css
+++ b/src/styles/Teachers.css
@@ -163,13 +163,13 @@
 
      .section-open .course-list {
          width: 89%;
-         padding-left: 2% !important;
+         padding-left:1.5% !important;
         
      }
 
      .card {
          position: relative;
-         width: 410px;
+         width: 390px;
          height: 400px;
          transform-style: preserve-3d;
          border-radius: 15px;
@@ -226,10 +226,10 @@
      }
 
      .section-open .course-list {
-         width: 93%;
-         padding-left: 0;
-         ( !important)
-     }
+        width: 89%;
+        padding-left: 0 !important;
+       
+    }
 
 
  }
